--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 <nav class="main-nav">
     <h3>Kafana</h3>
     <div>
-        <button>Login</button>
+        <button>Login 2</button>
         <button>Register</button>
     </div>
 </nav>
