--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="reservation-main">
-        <form class="reservation-form">
+        <form class="reservation-form" action="/" method="get">
             <label>
                 Name:
                 <input type="text" name="name">
