--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>Index</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body id="app">
 <nav class="main-nav">
     <h3>Kafana</h3>
     <div>
-        <button>Login 2</button>
+        <button>Login</button>
         <button>Register</button>
     </div>
 </nav>
