--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,6 +73,8 @@
 
 <script>
 
+    import axios from "axios";
+
     let app =  Vue.createApp({
         computed : {
 
@@ -85,6 +87,9 @@
                         console.log("Succesfull");
                         console.log(jsonObj);
 
+                    })
+                    .catch((error)=>{
+                        console.log(error);
                     })
             },
             test()
