--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
     <div class="reservation-main">
         <form class="reservation-form">
             <label>
-                {{name}}
+                Name:
                 <input type="text" name="name" v-model="name">
             </label>
             <label>
