--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,45 +27,47 @@
     </div>
     <div class="reservation-main">
         <form class="reservation-form">
-            <label>
-                Name:
-                <input type="text" name="name" v-model="name">
-            </label>
-            <label>
-                Surname:
-                <input type="text" name="surname" v-model="surname">
-            </label>
-            <label>
-                Number People:
-                <input type="number" name="numPeople" v-model="numPeople">
-            </label>
-            <label>
-                Number Tables:
-                <input type="text" name="numTables" v-model="numTables">
-            </label>
-            <label>
-                Time:
-                <input type="time" name="time" v-model="time">
-            </label>
-            <label>
-                Date:
-                <input type="date" name="date" v-model="date">
-            </label>
-            <label>
-                Tel:
-                <input type="tel" name="telephone" v-model="tel">
-            </label>
-            <label>
-                Email:
-                <input type="email" name="email" v-model="email">
-            </label>
-            <button @click.prevent="test"
-            >Make Reservation</button>
 
+            <div class="reservation item item-1">
+                <label>Name:</label>
+                <input type="text" name="name" v-model="name">
+            </div>
+
+            <div class="reservation item item-2">
+                <label>Surname:</label>
+                <input type="text" name="surname" v-model="surname">
+            </div>
+
+            <div class="reservation item item-3">
+                <label>Number People:</label>
+                <input type="number" name="numPeople" v-model="numPeople">
+            </div>
+
+            <div class="reservation item item-4">
+                <label>Number Tables:</label>
+                <input type="text" name="numTables" v-model="numTables">
+            </div>
+
+            <div class="reservation item item-5">
+                <label>Time:</label>
+                <input type="time" name="time" v-model="time">
+            </div>
+
+            <div class="reservation item item-6">
+                <label>Tel:</label>
+                <input type="tel" name="telephone" v-model="tel">
+            </div>
+
+            <div class="reservation item item-7">
+                <label>Email:</label>
+                <input type="email" name="email" v-model="email">
+            </div>
+
+            <button class="form-btn" @click.prevent="test"
+            >Make Reservation</button>
         </form>
     </div>
-    <div class="reservation-info right-info">
-</div>
+    <div class="reservation-info right-info"></div>
 
 </div>
 
