--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,15 +16,19 @@
     </div>
 </nav>
 <div class="main-page-container">
+
     <div class="reservation-info left-info">
+        <h1>Mali Masi: <span class="sm-counter"></span></h1>
         <div class="reservation-card">
-            <div class="res-name">Nikola Nikoloski</div>
-            <div class="res-mail">nikosla@nikoloski.com</div>
-            <div class="res-time">12:00H</div>
-            <div class="res-date">17.12.2023</div>
-            <div class="res-num-people">32 coveci</div>
+            <div class="res-name">Name: </div>
+            <div class="res-mail">Mail: </div>
+            <div class="res-time">Time: </div>
+            <div class="res-date">Date: </div>
+            <div class="res-num-people">Number of people: </div>
         </div>
+
     </div>
+
     <div class="reservation-main">
         <form class="reservation-form">
 
@@ -67,7 +71,9 @@
             >Make Reservation</button>
         </form>
     </div>
-    <div class="reservation-info right-info"></div>
+    <div class="reservation-info right-info">
+        <h1>Golemi Masi: <span class="bg-counter"></span></h1>
+    </div>
 
 </div>
 
