--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,6 +24,20 @@
             <div class="res-date">17.12.2023</div>
             <div class="res-num-people">32 coveci</div>
         </div>
+        <div class="reservation-card">
+            <div class="res-name">Nikola Nikoloski</div>
+            <div class="res-mail">nikosla@nikoloski.com</div>
+            <div class="res-time">12:00H</div>
+            <div class="res-date">17.12.2023</div>
+            <div class="res-num-people">32 coveci</div>
+        </div>
+        <div class="reservation-card">
+            <div class="res-name">Nikola Nikoloski</div>
+            <div class="res-mail">nikosla@nikoloski.com</div>
+            <div class="res-time">12:00H</div>
+            <div class="res-date">17.12.2023</div>
+            <div class="res-num-people">32 coveci</div>
+        </div>
     </div>
     <div class="reservation-main">
         <form class="reservation-form">
@@ -67,7 +81,44 @@
             >Make Reservation</button>
         </form>
     </div>
-    <div class="reservation-info right-info"></div>
+    <div class="reservation-info right-info">
+        <div class="reservation-card">
+            <div class="res-name">Nikola Nikoloski</div>
+            <div class="res-mail">nikosla@nikoloski.com</div>
+            <div class="res-time">12:00H</div>
+            <div class="res-date">17.12.2023</div>
+            <div class="res-num-people">32 coveci</div>
+        </div>
+        <div class="reservation-card">
+            <div class="res-name">Nikola Nikoloski</div>
+            <div class="res-mail">nikosla@nikoloski.com</div>
+            <div class="res-time">12:00H</div>
+            <div class="res-date">17.12.2023</div>
+            <div class="res-num-people">32 coveci</div>
+        </div>
+        <div class="reservation-card">
+            <div class="res-name">Nikola Nikoloski</div>
+            <div class="res-mail">nikosla@nikoloski.com</div>
+            <div class="res-time">12:00H</div>
+            <div class="res-date">17.12.2023</div>
+            <div class="res-num-people">32 coveci</div>
+        </div>
+        <div class="reservation-card">
+            <div class="res-name">Nikola Nikoloski</div>
+            <div class="res-mail">nikosla@nikoloski.com</div>
+            <div class="res-time">12:00H</div>
+            <div class="res-date">17.12.2023</div>
+            <div class="res-num-people">32 coveci</div>
+        </div>
+        <div class="reservation-card">
+            <div class="res-name">Nikola Nikoloski</div>
+            <div class="res-mail">nikosla@nikoloski.com</div>
+            <div class="res-time">12:00H</div>
+            <div class="res-date">17.12.2023</div>
+            <div class="res-num-people">32 coveci</div>
+        </div>
+
+    </div>
 
 </div>
 
@@ -79,9 +130,15 @@
 
         },
         methods : {
-            submitForm(jsonObj)
+            seeFetched()
             {
-                fetch('http://127.0.0.1:5000/api/reserve', {
+              console.log(this.reservations);
+            },
+            submitForm(jsonObj, javaObj)
+            {
+                this.addReservationCard(javaObj)
+
+                /*fetch('http://127.0.0.1:5000/api/reserve', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -92,25 +149,25 @@
                     .then(data => {
                         // Handle the response from the backend
                         console.log (data);
+                        if(data === "200") this.addReservationCard(javaObj)
                     })
                     .catch(error => {
                         // Handle errors
                         console.error('Error submitting to backend:', error);
-                    });
+                    });*/
+            },
+            addReservationCard(reservationInfo)
+            {
+                console.log(reservationInfo);
             },
             test()
             {
-                let json = this.factory() ;
-                console.log(json)
+                let javaObject = this.factory() ;
+                console.log(javaObject)
 
-                let stringJson = JSON.stringify(json);
+                let stringJson = JSON.stringify(javaObject);
                 console.log(stringJson);
-
-
-                this.submitForm(stringJson)
-
-
-
+                this.submitForm(stringJson, javaObject)
             },
             factory()
             {
@@ -136,7 +193,19 @@
             }
 
         },
-
+        mounted()
+        {
+            // Fetch data from the local JSON file
+            fetch('/data.json')
+                .then(response => response.json())
+                .then(data => {
+                    // Set the data in the component's state
+                    console.log(data);
+                    this.reservations = data;
+                    // this.seeFetched();
+                })
+                .catch(error => console.error('Error fetching data:', error));
+        },
         data() {
             return {
                 name: "",
@@ -147,10 +216,10 @@
                 date:null,
                 tel:"",
                 email:"",
-                test1:"TEST",
+                reservations: [],
 
             };
-        }}
+        }},
     );
     app.mount("#app");
 </script>
