--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="main.css">
 </head>
+
 <body id="app">
 <nav class="main-nav">
     <h3>Kafana</h3>
@@ -26,6 +27,8 @@
             <div class="res-date">Date: </div>
             <div class="res-num-people">Number of people: </div>
         </div>
+
+    </div>
 
     <div class="reservation-main">
         <form class="reservation-form">
@@ -70,12 +73,10 @@
         </form>
     </div>
     <div class="reservation-info right-info">
-
         <h1>Golemi Masi: <span class="bg-counter"></span></h1>
     </div>
 
 </div>
-
 
 
 <script>
